[gd_scene load_steps=7 format=3 uid="uid://01ueeeqiu04i"]

[ext_resource type="Texture2D" uid="uid://cxgvquwsireb6" path="res://Assets/Artwork/character_select.png" id="1_80x4u"]
[ext_resource type="Script" path="res://Scripts/character_selection.gd" id="1_ey8tq"]
[ext_resource type="AudioStream" uid="uid://dt82yv3r265eb" path="res://Assets/Music/Addams.wav" id="3_ep2md"]
[ext_resource type="Texture2D" uid="uid://bg53tbh3ohekq" path="res://Assets/Characters/Yan1.png" id="3_gni7o"]
[ext_resource type="Texture2D" uid="uid://bb3w6anjtga06" path="res://Assets/Characters/Lore1.png" id="4_b8mnw"]
[ext_resource type="Texture2D" uid="uid://comy2g6bulv18" path="res://Assets/Characters/Agus1.png" id="5_un3pq"]

[node name="Character_selection" type="Node2D"]
scale = Vector2(0.62, 0.6)
script = ExtResource("1_ey8tq")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(0.405, 0.42)
texture = ExtResource("1_80x4u")
metadata/_edit_use_anchors_ = true

[node name="Yan" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.216
anchor_top = 0.603
anchor_right = 0.367
anchor_bottom = 0.868
offset_left = -16.72
offset_top = -4.23999
offset_right = 8.35999
offset_bottom = 30.5601
texture = ExtResource("3_gni7o")

[node name="Yan2" type="TextureButton" parent="TextureRect/Yan"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.177778
anchor_top = -0.0747664
anchor_right = 1.41587
anchor_bottom = 1.239
offset_right = 178.0
offset_bottom = 193.282
scale = Vector2(0.62, 0.6)
mouse_default_cursor_shape = 2
metadata/_edit_use_anchors_ = true

[node name="Lore" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.216
anchor_top = 0.603
anchor_right = 0.367
anchor_bottom = 0.868
offset_left = 417.28
offset_top = -4.24005
offset_right = 462.36
offset_bottom = 34.56
texture = ExtResource("4_b8mnw")

[node name="Lore2" type="TextureButton" parent="TextureRect/Lore"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.164179
anchor_top = -0.0861662
anchor_right = 1.325
anchor_bottom = 1.26594
offset_top = 0.00400019
offset_right = 200.124
offset_bottom = 195.568
scale = Vector2(0.62, 0.6)
mouse_default_cursor_shape = 2
metadata/_edit_use_anchors_ = true

[node name="Agus" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.216
anchor_top = 0.603
anchor_right = 0.367
anchor_bottom = 0.868
offset_left = 859.28
offset_top = -8.24005
offset_right = 876.36
offset_bottom = 38.56
texture = ExtResource("5_un3pq")

[node name="Agus2" type="TextureButton" parent="TextureRect/Agus"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.178824
anchor_top = -0.0963102
anchor_right = 1.05031
anchor_bottom = 1.23103
offset_left = -0.100914
offset_top = 0.0712891
offset_right = 175.555
offset_bottom = 193.067
scale = Vector2(0.62, 0.6)
mouse_default_cursor_shape = 2
metadata/_edit_use_anchors_ = true

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(0.62, 0.6)
stream = ExtResource("3_ep2md")
autoplay = true

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(0.62, 0.6)
stream = ExtResource("3_ep2md")
autoplay = true

[connection signal="mouse_entered" from="TextureRect/Yan" to="." method="_on_lore_focus_entered"]
[connection signal="mouse_entered" from="TextureRect/Yan" to="." method="_on_yan_focus_entered"]
[connection signal="mouse_entered" from="TextureRect/Yan" to="." method="_on_agus_focus_entered"]
[connection signal="mouse_exited" from="TextureRect/Yan" to="." method="_on_lore_focus_exited"]
[connection signal="mouse_exited" from="TextureRect/Yan" to="." method="_on_agus_focus_exited"]
[connection signal="mouse_exited" from="TextureRect/Yan" to="." method="_on_yan_focus_exited"]
[connection signal="mouse_entered" from="TextureRect/Yan/Yan2" to="." method="_on_yan_focus_entered"]
[connection signal="mouse_exited" from="TextureRect/Yan/Yan2" to="." method="_on_yan_focus_exited"]
[connection signal="pressed" from="TextureRect/Yan/Yan2" to="." method="_on_yan_pressed"]
[connection signal="mouse_entered" from="TextureRect/Lore/Lore2" to="." method="_on_lore_focus_entered"]
[connection signal="mouse_exited" from="TextureRect/Lore/Lore2" to="." method="_on_lore_focus_exited"]
[connection signal="pressed" from="TextureRect/Lore/Lore2" to="." method="_on_lore_pressed"]
[connection signal="mouse_entered" from="TextureRect/Agus/Agus2" to="." method="_on_agus_focus_entered"]
[connection signal="mouse_exited" from="TextureRect/Agus/Agus2" to="." method="_on_agus_focus_exited"]
[connection signal="pressed" from="TextureRect/Agus/Agus2" to="." method="_on_agus_pressed"]
